<resources>
    <string name="app_name">Example Chat App</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="contact_no">Contact No.</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="welcome_back">Welcome Back \nPlease Sign in</string>
    <string name="login">Login</string>
</resources>